--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ button:focus, input:focus {
 }
 
 .btn {
-    background-color: #F08080;
+    background-color: rgb(36, 10, 79);
     border-radius: 2px;
     color: white;
     user-select: none;
@@ -77,11 +77,11 @@ body {
 /* Header */
 
 h1 {
-    font-family: 'Luckiest Guy', cursive;
+    font-family: 'arial', cursive;
     font-size: 2.5rem;
     padding: 2rem 0 1rem;
     margin: 0;
-    color: #FFAFAF;
+    color: rgb(104, 82, 163);
     text-shadow: black 2px 1px 1px;
 }
 
@@ -103,7 +103,7 @@ h1 {
 }
 
 .searchbar > input[type=submit] {
-    background-color: black;
+    background-color: rgb(17, 7, 72);
     padding: 1rem;
     border: none;
     border-radius: 2px;
